_scss/base/_style-typography.scss
@import '../variables/_var-typography.scss';

body {
	color: $color-black;
	font-family: $typeface-body;
	font-kerning: auto;
	font-size: 1.25em;
	font-variant-ligatures: common-ligatures;
	line-height: $line-height;
}

h1, h2, h3, h4, h5, h6 {
    color: $color-almostblack-tint--1;
	font-family: $typeface-brand;
	-webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
	letter-spacing: .01em;
	line-height: 1.3;
	font-size: 2rem;
	font-weight: 400;
	margin-bottom: .25em;
	max-width: $component-primary-max-width;
}
.article h2, .article h3, .article h4, .article h5, .article h6 {
    padding-top: 1.5rem;
}
h2 {
	font-size: 1.75rem;
}
h3 {
	font-size: 1.5rem;
}
h4 {
	font-size: 1.25rem;
}
h5, h6 {
	font-size: 1rem;
}
h6 {
	color: $color-black;
	font-family: $typeface-body;
}

p, li {
	font-size: $font-size-body;
	margin-top: 1rem;
	// padding-bottom: 1rem;
	max-width: 32em;
}

p.intro {
	font-family: $typeface-brand;
	font-size: 1.2rem;
	font-style: italic;
	max-width: $body-max-paragraph-width;
}

em {
    font-size: 104%; // Optically correct type sizing for Italicised text
}

hr {
	border-top: 1em solid $color-semi;
}

@include breakpoint(mediumUp) {
	h1:not([class*="title-"]) {
		font-size: 2.185rem;
	}
	h2:not([class*="title-"]) {
		font-size: 1.875rem;
	}
	h3:not([class*="title-"]) {
		font-size: 1.5rem;
	}
	h4:not([class*="title-"]) {
		font-size: 1.35rem;
	}
	h5:not([class*="title-"]),
	h6:not([class*="title-"]) {
		font-size: 1.25rem;
	}
	p, li {
		margin-top: 1rem;
		font-size: 1.25rem;
	}
	p.intro {
		font-size: 1.35rem;
	}
}

li {
	margin: $scale--1;
}

a {
	@include transition-out;
	border-bottom: 2px solid $color-support;
	color: $color-interactive;
	outline: none;
	text-decoration: none;
	&:hover, &:focus, &:active {
		@include transition-in;
		background: $color-semi;
		border-bottom: 2px solid $color-semi;
		color: $color-white;
		outline: 3px solid $color-semi;
	}
	&:active {
		background: $color-semi-accent;
		outline: 3px solid $color-semi-accent;
	}
}
.image-link {
    border-bottom-width: 0;
    &:hover, &:focus, &:active {
        background: none;
        border-bottom-width: 0;
        outline: none;
    }
}

small {
    font-size: 1.05rem;
}

strong {
    color: $color-almostblack-tint--1;
	font-weight: 500;
	em {
    	color: $color-semi-tint-1;
    	font-style: normal;
	}
}

sub, sup {
	line-height: 0; // Prevent sub and superscript affecting line-height
	position: relative;
}
sub {
	vertical-align: sub;
}
sup {
	vertical-align: super;
}

abbr, .sm-caps {
	font-size: 1.05em;
	font-variant-caps: small-caps;
	line-height: 1;
	margin: auto .025em;
	text-decoration: none !important;
	text-transform: lowercase;
	&[title] {
		cursor: help;
	}
}

del {
    color: $color-gray-3;
}

dfn {
    color: $color-interactive;
    font-style: normal;
    &[title] {
		cursor: help;
	}
}

blockquote {
	margin-left: 2em; 
    color: $color-gray-2;
	position: relative;
	max-width: $body-max-paragraph-width-wide;
	&:before {
		color: $color-semi;
		content: '\201c';
		font-family: 'Alegreya', serif;
		font-size: 5em;
		left: -.5em;
		position: absolute;
		top: -.25em;
	}
	p {
		font-size: 2em;
		font-style: italic;
	}
	footer {
		&:before {
			color: $color-semi;
			content: '—';
			margin-right: .5em;
		}
	}
}

.text--secondary {
    color: $color-almostblack-tint--6;
}

.paragraph--centered {
    text-align: center;
}

.paragraph--right-aligned {
    text-align: right;
}

footer {
	font-family: $typeface-body;
	h2 {
		color: $color-black;	
	}
	h4, a {
		color: $color-white;
	}
}

.color-light {
	color: $color-white;

	a {
		color: $color-white;
	}
}

